--- a/js/res/less/pager.less
+++ b/js/res/less/pager.less
@@ -1,14 +1,28 @@
 .autoPager{
 	a{
+		padding: 5px 10px;
 		display: inline-block;
+		border: 1px solid #b6bcc1;
 		text-decoration: none;
-		color: #000;
-		border: 1px solid #ccc;
+		color: #b6bcc1;
+		border-radius: 3px;
+		font-size: 12px;
+		margin: 0 2px;
+		cursor: pointer;
 		&:hover{
 			text-decoration: none;
 		}
 	}
 	a.current{
-
+		background: #b6bcc1;
+		color: #fff;
+		cursor: default;
+	}
+	a.disable{
+		background: #f1f1f1;
+		border-color: #f1f1f1;
+		cursor: default;
+		color: #fff;
+		cursor: default;
 	}
 }
