--- a/js/res/less/xbox.less
+++ b/js/res/less/xbox.less
@@ -1,4 +1,10 @@
+.clearfix:after{visibility:hidden;display:block;font-size:0;content:" ";clear:both;height:0}
+.clearfix{*zoom:1}
 .tetequ-box{
+	h2{
+		margin: 0;
+		padding: 0;
+	}
 	.ui-mask{
 		position: fixed;
 		top: 0px;
