--- a/js/res/less/pager.less
+++ b/js/res/less/pager.less
@@ -1,4 +1,7 @@
 .autoPager{
+      -moz-user-select:none;
+      -webkit-user-select:none;
+      user-select:none;    
 	a{
 		padding: 5px 10px;
 		display: inline-block;
