--- a/js/res/css/suggester.css
+++ b/js/res/css/suggester.css
@@ -1,1 +1,2 @@
-.sug{width:258px;border:1px solid #ddd;overflow:hidden}
+.sug{width:258px;border:1px solid #ddd;overflow:hidden}.sug .itm{height:26px;line-height:26px}
+.sug .itm.selected{background:#ccc}
