--- a/js/res/less/suggester.less
+++ b/js/res/less/suggester.less
@@ -2,4 +2,11 @@
 	width: 258px;
 	border: 1px solid #DDD;
 	overflow: hidden;
+	.itm{
+		height: 26px;
+		line-height: 26px;
+	}
+	.itm.selected{
+		background: #ccc;
+	}
 }
