--- a/js/res/css/suggester.css
+++ b/js/res/css/suggester.css
@@ -1,2 +1,2 @@
-.sug{width:258px;border:1px solid #ddd;overflow:hidden}.sug .itm{height:26px;line-height:26px}
-.sug .itm.selected{background:#ccc}
+._sug{width:258px;border:1px solid #ddd;overflow:hidden}._sug .itm{height:26px;line-height:26px}
+._sug .itm.selected{background:#ccc}
