--- a/js/res/less/xbox.less
+++ b/js/res/less/xbox.less
@@ -78,6 +78,7 @@
 		padding: 10px;
 		border-top: 1px solid #d8d8d8;
 		-webkit-box-sizing: border-box;
+		position: relative;
 		a{
 			float: right;
 			display: inline-block;
