--- a/js/res/css/datepicker.css
+++ b/js/res/css/datepicker.css
@@ -9,9 +9,31 @@ div.datepicker {
 	top: 0;
 	left: 0;
 	display: none;
+	z-index: 1000;
+	display: none;
+	float: left;
+	min-width: 160px;
+	padding: 5px 0;
+	margin: 2px 0 0;
+	list-style: none;
+	background-color: #fff;
+	border: 1px solid #ccc;
+	border: 1px solid rgba(0,0,0,0.2);
+	-webkit-border-radius: 6px;
+	-moz-border-radius: 6px;
+	border-radius: 6px;
+	-webkit-box-shadow: 0 5px 10px rgba(0,0,0,0.2);
+	-moz-box-shadow: 0 5px 10px rgba(0,0,0,0.2);
+	box-shadow: 0 5px 10px rgba(0,0,0,0.2);
+	-webkit-background-clip: padding-box;
+	-moz-background-clip: padding;
+	background-clip: padding-box;
+}
+div.datepicker .datepickerMonth{
+	width: 150px;
 }
 .datepickerContainer {
-	background: #121212;
+	background: #ffffff;
 	position: absolute;
 	top: 10px;
 	left: 10px;
@@ -22,7 +44,7 @@ div.datepicker {
 	top: 0;
 	right: 10px;
 	height: 10px;
-	background: url(../images/datepicker_t.png);
+	
 }
 .datepickerBorderB {
 	position: absolute;
@@ -30,7 +52,7 @@ div.datepicker {
 	bottom: 0;
 	right: 10px;
 	height: 10px;
-	background: url(../images/datepicker_b.png);
+	
 }
 .datepickerBorderL {
 	position: absolute;
@@ -38,7 +60,7 @@ div.datepicker {
 	bottom: 10px;
 	top: 10px;
 	width: 10px;
-	background: url(../images/datepicker_l.png);
+	
 }
 .datepickerBorderR {
 	position: absolute;
@@ -46,7 +68,7 @@ div.datepicker {
 	bottom: 10px;
 	top: 10px;
 	width: 10px;
-	background: url(../images/datepicker_r.png);
+	
 }
 .datepickerBorderTL {
 	position: absolute;
@@ -54,7 +76,7 @@ div.datepicker {
 	left: 0;
 	width: 10px;
 	height: 10px;
-	background: url(../images/datepicker_tl.png);
+	
 }
 .datepickerBorderTR {
 	position: absolute;
@@ -62,7 +84,7 @@ div.datepicker {
 	right: 0;
 	width: 10px;
 	height: 10px;
-	background: url(../images/datepicker_tr.png);
+	
 }
 .datepickerBorderBL {
 	position: absolute;
@@ -70,7 +92,7 @@ div.datepicker {
 	left: 0;
 	width: 10px;
 	height: 10px;
-	background: url(../images/datepicker_bl.png);
+	
 }
 .datepickerBorderBR {
 	position: absolute;
@@ -78,16 +100,18 @@ div.datepicker {
 	right: 0;
 	width: 10px;
 	height: 10px;
-	background: url(../images/datepicker_br.png);
+	
 }
+
 .datepickerHidden {
 	display: none;
 }
 div.datepicker table {
 	border-collapse:collapse;
+	width: 100%;
 }
 div.datepicker a {
-	color: #eee;
+	color: #000;
 	text-decoration: none;
 	cursor: default;
 	outline: none;
@@ -96,10 +120,16 @@ div.datepicker table td {
 	text-align: center;
 	padding: 0;
 	margin: 0;
+	width: 20px;
+	height: 20px;
+	-webkit-border-radius: 4px;
+	-moz-border-radius: 4px;
+	border-radius: 4px;
+	border: none;
 }
 div.datepicker th {
 	text-align: center;
-	color: #999;
+	color: #000;
 	font-weight: normal;
 }
 div.datepicker tbody th {
@@ -110,9 +140,9 @@ div.datepicker tbody a {
 }
 .datepickerDays a {
 	width: 20px;
-	line-height: 16px;
-	height: 16px;
-	padding-right: 2px;
+	line-height: 20px;
+	height: 20px;
+	padding: 4px 5px;
 }
 .datepickerYears a,
 .datepickerMonths a{
@@ -122,11 +152,28 @@ div.datepicker tbody a {
 	text-align: center;
 }
 td.datepickerNotInMonth a {
-	color: #666;
+	color: #999;
 }
 tbody.datepickerDays td.datepickerSelected{
-	background: #136A9F;
+	background-color: #006dcc;
+	background-image: -moz-linear-gradient(top, #0088cc, #0044cc);
+	background-image: -ms-linear-gradient(top, #0088cc, #0044cc);
+	background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#0088cc), to(#0044cc));
+	background-image: -webkit-linear-gradient(top, #0088cc, #0044cc);
+	background-image: -o-linear-gradient(top, #0088cc, #0044cc);
+	background-image: linear-gradient(top, #0088cc, #0044cc);
+	background-repeat: repeat-x;
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#0088cc', endColorstr='#0044cc', GradientType=0);
+	border-color: #0044cc #0044cc #002a80;
+	border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+	filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
+	color: #fff;
+	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
 }
+tbody.datepickerDays td.datepickerSelected span{
+	color:#fff;
+}
+
 tbody.datepickerDays td.datepickerNotInMonth.datepickerSelected {
 	background: #17384d;
 }
@@ -134,15 +181,19 @@ tbody.datepickerYears td.datepickerSelected,
 tbody.datepickerMonths td.datepickerSelected{
 	background: #17384d;
 }
-div.datepicker a:hover,
-div.datepicker a:hover {
-	color: #88c5eb;
+div.datepicker ._tt th:hover, .datepickerViewDays td:hover,.datepickerViewYears td:hover,.datepickerViewMonths td:hover{
+	background: #eeeeee;
+	-webkit-border-radius: 4px;
+	-moz-border-radius: 4px;
+	border-radius: 4px;
 }
 div.datepicker td.datepickerNotInMonth a:hover {
 	color: #999;
+	
 }
 div.datepicker tbody th {
 	text-align: center;
+	padding: 4px 5px;
 }
 .datepickerSpace div {
 	width: 20px;
@@ -186,7 +237,17 @@ td.datepickerDisabled a:hover {
 td.datepickerSpecial a {
 	background: #700;
 }
-/* www.codefans.net */
+
 td.datepickerSpecial.datepickerSelected a {
 	background: #a00;
+}
+div.datepicker table .datepickerMonths td,div.datepicker table .datepickerYears td{
+	height: 65px;
+	line-height: 65px;
+	-webkit-border-radius: 4px;
+	-moz-border-radius: 4px;
+	border-radius: 4px;
+}
+div.datepicker table ._cc:hover{
+	background: #FFF !important;
 }
