--- a/js/res/css/suggester.css
+++ b/js/res/css/suggester.css
@@ -1,2 +1,2 @@
-._sug{width:258px;border:1px solid #ddd;overflow:hidden}._sug .itm{height:26px;line-height:26px}
+._sug{width:258px;border:1px solid #ddd;overflow:hidden;position: absolute;z-index: 999;}._sug .itm{height:26px;line-height:26px;background: #fff;}
 ._sug .itm.selected{background:#ccc}
